# NullTrace

./: .gitignore  README.md  dd_shadow.py  mypy.ini  pyproject.toml
.github/: settings.yml
.github/workflows/: black-autofix.yml  black.yml  ci.yml  mass-nulltrace.yml
NullTrace/: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
NullTrace/src/tools/: nulltrace_soak.py  validate_soak.py
NullTrace/tests/: test_tools_smoke.py
data/: current.csv  previous_shadow.csv
src/: null_trace.py
src/nulltrace/: __init__.py  __main__.py  null_trace.py
src/tools/: nulltrace_soak.py  validate_soak.py
tests/: test_cli_smoke.py  test_null_trace.py  test_nulltrace_cli_snapshot.py  test_nulltrace_smoke.py  test_nulltrace_snapshot_diff_correctness.py  test_nulltrace_snapshot_manifest_fields.py  test_nulltrace_snapshot_non_numeric.py  test_tools_smoke.py
tests/data/: previous_shadow.csv
