[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nulltrace"
version = "0.0.0"
requires-python = ">=3.10"
description = "NullTrace module"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
